docs(RESULTS): GC attribution verified — live_mvcc writer_max IS the young pause
Labelled fleet diagnostic 2026-08-05 (SMRC_GC_DIAG stall stamps vs
-Xlog:gc* wall-clock logs, 3 repeats x 4 java live cells, not
journaled):

- live_mvcc: in all 3 repeats the run's single G1 young pause
  (2.6-2.8 ms) overlaps the writer_max op (2.8-3.1 ms) exactly.
  Attribution confirmed.
- live_stw control: zero GC events in the entire run — the reused
  serialize buffer allocates nothing; the chunk copies are the garbage.
  Maxima sit on the snapshot-trigger iterations, i.e. the serialize.
- Churn cells: the single ~2.3 ms young pause fires BEFORE the timed
  loop (setup empties young gen), so the 60-100 ms window completes
  collection-free — the ms-scale µs-scale contrast is window-vs-cadence,
  not a guarantee. Claim tempered accordingly; ZGC/Shenandoah arm noted
  as the follow-up if the stall budget matters.